Implement new drop page

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,11 +12,11 @@
     "import-shared": "rm -Rf src/shared && cp -R ../api/src/shared src/shared"
   },
   "dependencies": {
-    "@taquito/beacon-wallet": "^11.2.0",
-    "@taquito/signer": "^11.2.0",
-    "@taquito/taquito": "^11.2.0",
-    "@taquito/utils": "^11.2.0",
-    "@temple-wallet/dapp": "^6.1.0",
+    "@taquito/beacon-wallet": "^13.0.0",
+    "@taquito/signer": "^13.0.0",
+    "@taquito/taquito": "^13.0.0",
+    "@taquito/utils": "^13.0.0",
+    "@temple-wallet/dapp": "^7.0.0",
     "axios": "^0.24.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -26,6 +26,7 @@
     "history": "^5.0.1",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
+    "qrcode.react": "^3.0.2",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
