--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,6 +24,8 @@
     "dayjs": "^1.10.7",
     "gsap": "^3.9.1",
     "history": "^5.0.1",
+    "ipfs-core": "^0.15.2",
+    "ipfs-http-client": "55.0.0",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "qrcode.react": "^3.0.2",
