--- a/src/contracts/package.json
+++ b/src/contracts/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@taquito/signer": "^12.1.1",
     "@taquito/taquito": "^12.1.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.32",
     "@types/sharp": "^0.30.2",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -16,6 +17,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^10.1.0",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.8.1"
+  },
+  "dependencies": {
+    "typescript": "^4.7.4"
   }
 }
