--- a/src/contracts/tsconfig.json
+++ b/src/contracts/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "ESNext"],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "jsx": "react-jsx",
     "isolatedModules": true,
