Test token creation and minting

--- a/src/frontend/.env.example
+++ b/src/frontend/.env.example
@@ -5,4 +5,4 @@ PORT=80
 NODE_VERSION=16.6.1
 REACT_APP_NAME=drop.museum
 REACT_APP_NETWORK=ithacanet
-REACT_APP_RPC_PROVIDER=https://ithacanet.smartpy.io
+REACT_APP_RPC_PROVIDER=https://ithacanet.tezos.marigold.dev
