--- a/src/contracts/package.json
+++ b/src/contracts/package.json
@@ -20,6 +20,8 @@
     "ts-node": "^10.8.1"
   },
   "dependencies": {
+    "@taquito/tzip12": "^13.0.0",
+    "@taquito/tzip16": "^13.0.0",
     "typescript": "^4.7.4"
   }
 }
