--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,7 @@
     "@taquito/beacon-wallet": "^13.0.0",
     "@taquito/signer": "^13.0.0",
     "@taquito/taquito": "^13.0.0",
+    "@taquito/tzip12": "^13.0.0",
     "@taquito/utils": "^13.0.0",
     "@temple-wallet/dapp": "^7.0.0",
     "axios": "^0.27.2",
